# Chapter12

./: .gitmodules  Dockerfile  Dockerfile.CUDA  Dockerfile.DPCPP  Dockerfile.Kokkos  Dockerfile.OpenCL.IntelGPU  Dockerfile.OpenCL.Nvidia  Dockerfile.Raja  Dockerfile.Ubuntu20.04  Dockerfile.debian  Dockerfile.test  IntelSelectedList  IntelSelectedShortList  License.txt  Makefile  Makefile.CUDA  Makefile.HIP  README.autovirtualbox  README.cloud  README.docker  README.md  README.virtualbox  Setup_CUDA  Setup_HIP  Setup_Kokkos  Setup_Nvidia_Container  Setup_OpenCL  Setup_Raja  autovirtualbox.sh  docker_run.sh  dockerbash.sh  dockercuda.sh  dockerdpcpp.sh  dockerit.sh  dockerkokkos.sh  dockeropenclnvidia.sh  dockerraja.sh  dockertest.sh
CUDA/StreamTriad/: CMakeLists_new.txt  CMakeLists_old.txt  Makefile.simple  StreamTriad.cu
CUDA/SumReduction/: CMakeLists.txt  Makefile.simple  SumReduction.cu
CUDA/SumReductionRevealed/: Makefile  SumReductionRevealed.c
DPCPP/StreamTriad/: CMakeLists.txt  Makefile  StreamTriad.cc
HIP/StreamTriad/: CMakeLists.txt  Makefile.clang  Makefile.perl  StreamTriad.cc  StreamTriad.cu
Kokkos/StreamTriad/: CMakeLists.txt  StreamTriad.cc
OpenCL/StreamTriad/: CMakeLists.txt  Makefile.simple  StreamTriad.c  StreamTriad_kern.cl  StreamTriad_kernel.cl  StreamTriad_simple.c  embed_source.pl  ezcl_lite.c  ezcl_lite.h  ezclsmall.c
OpenCL/SumReduction/: CMakeLists.txt  Makefile.simple  SumReduction.c  SumReduction_kernel.cl  SumReduction_simple.c
Raja/StreamTriad/: CMakeLists.txt  Setup_Raja.sh  StreamTriad.cc
StreamTriad/: CMakeLists_new.txt  CMakeLists_old.txt  Makefile.simple  stream_triad.cu
